--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,8 @@ stages:
 docker_build:
   stage: build_image
   image: docker:19.03.13-dind
+  before_script:
+    - docker login -u $REGISTRY_LOGIN -p $REGISTRY_PASSWORD registry.msh-lse.fr
   script:
     - docker info
     - docker build -t $CONTAINER_TEST_IMAGE .
@@ -47,8 +49,7 @@ k8s_deploy_production:
   image: alpine/helm
   script:
     - helm repo add bitnami https://charts.bitnami.com/bitnami
-    - helm get values $CI_PROJECT_NAME > /tmp/$CI_PROJECT_NAME.yaml
-    - helm upgrade $CI_PROJECT_NAME bitnami/nginx --set epimap.image.tag=$CI_COMMIT_TAG -f /tmp/$CI_PROJECT_NAME.yaml 
+    - helm upgrade $CI_PROJECT_NAME bitnami/nginx --set epimap.image.tag=$CI_COMMIT_TAG --reuse-values
   environment:
     name: production
     url: https://epimap.msh-lse.fr
